# librosco

./: .gitignore  CMakeLists.txt  HardwareInterface.md  ProjectHome.md  README  TODO  build-mxe.sh  libmems.3  libmemsinjection.3  librosco.3  librosco.pc.cmakein
src/: mems.h  mems_internal.h  mems_version.h.in  memsinjection.h  protocol.c  readmems.c  rosco.h  rosco_version.h.in  setup.c
